force-app/main/default/objects/FinServ__FinancialAccount__c/fields/ExternalPortfolioId__c.field-meta.xml
<CustomField>
    <fullName>ExternalPortfolioId__c</fullName>
    <description>Unique identifier from external investment portfolio system</description>
    <externalId>true</externalId>
    <label>External Portfolio ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>