force-app/main/default/objects/FinServ__FinancialAccount__c/fields/LastSyncDate__c.field-meta.xml
<CustomField>
    <fullName>LastSyncDate__c</fullName>
    <description>Last date/time portfolio data was synced from external system</description>
    <label>Last Sync Date</label>
    <type>DateTime</type>
</CustomField>