force-app/main/default/objects/FinServ__FinancialAccount__c/fields/TotalAssetValue__c.field-meta.xml
<CustomField>
    <fullName>TotalAssetValue__c</fullName>
    <description>Total market value of all holdings in this portfolio</description>
    <label>Total Asset Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>